{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 17,
  "lineage": "03e2097f-862a-cd83-3efd-a991b804c671",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "35.215.239.21",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-07-04T22:33:38.457-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/addresses/gcnix0-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gcnix0-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "project-1ab07399-29ab-4352-8f8",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/addresses/gcnix0-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "35.215.248.51",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-07-04T22:46:59.810-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/addresses/gcnix1-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gcnix1-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "project-1ab07399-29ab-4352-8f8",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/addresses/gcnix1-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "35.215.247.233",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-07-04T22:47:00.105-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/addresses/gcnix2-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "gcnix2-ip",
            "network_tier": "STANDARD",
            "prefix_length": 0,
            "project": "project-1ab07399-29ab-4352-8f8",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/addresses/gcnix2-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-07-03T16:27:36.912-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-1ab07399-29ab-4352-8f8/global/firewalls/gcnix-allow-icmp",
            "log_config": [],
            "name": "gcnix-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-1ab07399-29ab-4352-8f8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/firewalls/gcnix-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gcnix-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "2409"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-03T16:27:37.271-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-1ab07399-29ab-4352-8f8/global/firewalls/gcnix-allow-ssh",
            "log_config": [],
            "name": "gcnix-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-1ab07399-29ab-4352-8f8",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/firewalls/gcnix-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gcnix-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.nixos"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/images/nixos-26-05-k7-202607032317",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/disks/gcnix0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-07-04T22:53:43.872-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "os": "nixos",
              "pricing": "spot"
            },
            "enable_display": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/instances/gcnix0",
            "instance_id": "4160536583606652808",
            "label_fingerprint": "Dywq8D7Oi5w=",
            "labels": {
              "os": "nixos",
              "pricing": "spot"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "serial-port-enable": "TRUE",
              "shutdown-script": "#!/usr/bin/env bash\nset -euo pipefail\necho \"[gce-spot] shutdown/preemption notice at $(date --iso-8601=seconds)\" | systemd-cat -t gce-spot-shutdown || true\nsync || true\n",
              "startup-script": "#!/usr/bin/env bash\nset -euo pipefail\nMARKER=\"/var/lib/gce-first-boot-done\"\nif [ -f \"$MARKER\" ]; then\n  exit 0\nfi\nmkdir -p \"$(dirname \"$MARKER\")\"\n{\nnixos-rebuild switch --flake /etc/nixos#gcnix\n} | systemd-cat -t gce-first-boot\ntouch \"$MARKER\"\n"
            },
            "metadata_fingerprint": "JWL7J-nORBU=",
            "name": "gcnix0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.215.239.21",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
                "network_ip": "10.42.0.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/subnetworks/gcnix-subnet",
                "subnetwork_project": "project-1ab07399-29ab-4352-8f8"
              }
            ],
            "project": "project-1ab07399-29ab-4352-8f8",
            "scheduling": [
              {
                "automatic_restart": false,
                "availability_domain": 0,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/instances/gcnix0",
            "service_account": [
              {
                "email": "tofunix@project-1ab07399-29ab-4352-8f8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "gcnix-ssh"
            ],
            "tags_fingerprint": "Cy0eH0mvnDM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "os": "nixos",
              "pricing": "spot"
            },
            "zone": "southamerica-east1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "data.google_client_openid_userinfo.me",
            "data.google_compute_image.nixos",
            "google_compute_address.nixos",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.nixos",
            "google_compute_subnetwork.nixos",
            "google_os_login_ssh_public_key.current_user"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/images/nixos-26-05-k7-202607032317",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/disks/gcnix1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-07-04T22:53:43.643-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "os": "nixos",
              "pricing": "spot"
            },
            "enable_display": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/instances/gcnix1",
            "instance_id": "3295587005494480776",
            "label_fingerprint": "Dywq8D7Oi5w=",
            "labels": {
              "os": "nixos",
              "pricing": "spot"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "serial-port-enable": "TRUE",
              "shutdown-script": "#!/usr/bin/env bash\nset -euo pipefail\necho \"[gce-spot] shutdown/preemption notice at $(date --iso-8601=seconds)\" | systemd-cat -t gce-spot-shutdown || true\nsync || true\n",
              "startup-script": "#!/usr/bin/env bash\nset -euo pipefail\nMARKER=\"/var/lib/gce-first-boot-done\"\nif [ -f \"$MARKER\" ]; then\n  exit 0\nfi\nmkdir -p \"$(dirname \"$MARKER\")\"\n{\nnixos-rebuild switch --flake /etc/nixos#gcnix\n} | systemd-cat -t gce-first-boot\ntouch \"$MARKER\"\n"
            },
            "metadata_fingerprint": "JWL7J-nORBU=",
            "name": "gcnix1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.215.248.51",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
                "network_ip": "10.42.0.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/subnetworks/gcnix-subnet",
                "subnetwork_project": "project-1ab07399-29ab-4352-8f8"
              }
            ],
            "project": "project-1ab07399-29ab-4352-8f8",
            "scheduling": [
              {
                "automatic_restart": false,
                "availability_domain": 0,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/instances/gcnix1",
            "service_account": [
              {
                "email": "tofunix@project-1ab07399-29ab-4352-8f8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "gcnix-ssh"
            ],
            "tags_fingerprint": "Cy0eH0mvnDM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "os": "nixos",
              "pricing": "spot"
            },
            "zone": "southamerica-east1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "data.google_client_openid_userinfo.me",
            "data.google_compute_image.nixos",
            "google_compute_address.nixos",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.nixos",
            "google_compute_subnetwork.nixos",
            "google_os_login_ssh_public_key.current_user"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/images/nixos-26-05-k7-202607032317",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/disks/gcnix2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-07-04T22:53:43.669-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "os": "nixos",
              "pricing": "spot"
            },
            "enable_display": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/instances/gcnix2",
            "instance_id": "4268039572075859848",
            "label_fingerprint": "Dywq8D7Oi5w=",
            "labels": {
              "os": "nixos",
              "pricing": "spot"
            },
            "machine_type": "e2-standard-2",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "TRUE",
              "serial-port-enable": "TRUE",
              "shutdown-script": "#!/usr/bin/env bash\nset -euo pipefail\necho \"[gce-spot] shutdown/preemption notice at $(date --iso-8601=seconds)\" | systemd-cat -t gce-spot-shutdown || true\nsync || true\n",
              "startup-script": "#!/usr/bin/env bash\nset -euo pipefail\nMARKER=\"/var/lib/gce-first-boot-done\"\nif [ -f \"$MARKER\" ]; then\n  exit 0\nfi\nmkdir -p \"$(dirname \"$MARKER\")\"\n{\nnixos-rebuild switch --flake /etc/nixos#gcnix\n} | systemd-cat -t gce-first-boot\ntouch \"$MARKER\"\n"
            },
            "metadata_fingerprint": "JWL7J-nORBU=",
            "name": "gcnix2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.215.247.233",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
                "network_ip": "10.42.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/subnetworks/gcnix-subnet",
                "subnetwork_project": "project-1ab07399-29ab-4352-8f8"
              }
            ],
            "project": "project-1ab07399-29ab-4352-8f8",
            "scheduling": [
              {
                "automatic_restart": false,
                "availability_domain": 0,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/zones/southamerica-east1-a/instances/gcnix2",
            "service_account": [
              {
                "email": "tofunix@project-1ab07399-29ab-4352-8f8.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "gcnix-ssh"
            ],
            "tags_fingerprint": "Cy0eH0mvnDM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "os": "nixos",
              "pricing": "spot"
            },
            "zone": "southamerica-east1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "data.google_client_openid_userinfo.me",
            "data.google_compute_image.nixos",
            "google_compute_address.nixos",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.nixos",
            "google_compute_subnetwork.nixos",
            "google_os_login_ssh_public_key.current_user"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
            "mtu": 0,
            "name": "gcnix-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "286029680893885363",
            "numeric_id": "286029680893885363",
            "project": "project-1ab07399-29ab-4352-8f8",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nixos",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-03T16:27:37.801-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.42.0.1",
            "id": "projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/subnetworks/gcnix-subnet",
            "ip_cidr_range": "10.42.0.0/24",
            "name": "gcnix-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/global/networks/gcnix-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-1ab07399-29ab-4352-8f8",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-1ab07399-29ab-4352-8f8/regions/southamerica-east1/subnetworks/gcnix-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8156870461303946118
          },
          "dependencies": [
            "google_compute_network.nixos"
          ]
        }
      ]
    }
  ]
}